--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.28",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuetify": "^3.1.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
